[DSW-1297] Fix sidebar link text alignment

--- a/engine-wizard/scss/_layout.scss
+++ b/engine-wizard/scss/_layout.scss
@@ -84,7 +84,8 @@ body {
             padding: 1px 3px;
 
             a {
-                display: inline-block;
+                display: flex;
+                align-items: baseline;
                 width: 100%;
                 padding: 10px;
                 color: $side-navigation-link-color;
@@ -104,8 +105,8 @@ body {
 
                 .fa {
                     display: inline-block;
-                    width: 40px;
-                    text-align: center
+                    text-align: center;
+                    flex: 0 0 40px;
                 }
             }
         }
